--- a/css/intro/name-top.css
+++ b/css/intro/name-top.css
@@ -7,7 +7,7 @@
 .name-top .name {
   font-size: 13vw;
   line-height: 1;
-  padding: 0;
+  padding: .5vw 0 1.5vw; /* This looks centered, and IDK why */
   margin: 0;
 }
 .name-top .extra {
